immersion: create contest permission check rest
